[package]
name = "healthpulse"
version = "0.1.0"
edition = "2024"
description = "Code health and technical debt analyzer — scans repositories for complexity, style, and maintainability issues"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
regex = "1.11"
colored = "3.0"
schemars = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"